# cherrymxboard30s-rgb

./: .gitignore  .gitlab-ci.yml  50-cherrymx.rules  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: c-cpp.yml  ubuntu-22.04.yml
src/: main.c
src/args/: args.c  args.h
src/color/: color.h
src/device/: device.c  device.h  lighting.c  lighting.h
src/help/: help.c  help.h
src/log/: log.c  log.h
